# Engsci331_Lab01

./: README.md  main-DESKTOP-RSRRDRH.py  main.py  pain.py
RustyLab1/: Cargo.toml  pyproject.toml
RustyLab1/src/: lib.rs
