[package]
name = "RustyLab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "RustyLab1"
crate-type = ["cdylib"]

# help

[dependencies]
pyo3 = "0.19.0"
ndarray = {version = "0.15.6", features = ["blas", "rayon"]}
blas-src = {version = "0.9.0", features = ["intel-mkl"]}
# blas-src = {version = "0.9.0", features = ["openblas"]}
# openblas-src = { version = "0.10", features = ["cblas", "system"] }
numpy = "0.19.0"
ndarray-rand = "0.14.0"
rayon = "1.7.0"


[dependencies.ndarray-linalg]
version = "0.16.0"

[profile.release]
lto = true         # Link-time optimization.
codegen-units = 1  # Slower compilation but faster code.

